# webman_analysis

./: .gitignore  README.md  manage.py  pyproject.toml  redis_config.py
authentication/: urls.py
authentication/migrations/: 0001_initial.py  0002_alter_user_managers.py
authentication/models/: __init__.py  models.py  user_manager.py
authentication/serializers/: login_serializer.py  signup_serializer.py
authentication/utils/: otp.py
authentication/views/: authentication.py  home.py
webman_analysis/: asgi.py  custom_logging.py  loggers.py  settings.py  urls.py  wsgi.py
webman_analysis/base_models/: base_models.py
